# Chronogram

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  __main__.py  config.py  docker-compose.yml  example.env  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
chronogram/: __main__.py  photo_utils.py  settings_menu_models.py  utils.py
chronogram/background_workers/: __init__.py  subscription_revoker.py  timecapsule_sender.py
chronogram/database/: __init__.py  models.py  requests.py  schema.py
chronogram/handlers/: __init__.py  admin_panel.py  common.py  delete_everything.py  general.py
chronogram/handlers/inbox/: __init__.py  inbox.py  inbox_menu.py
chronogram/handlers/payments/: __init__.py  payments.py  schemas.py
chronogram/handlers/settings/: __init__.py  settings.py  settings_menu.py  utc_picker.py
chronogram/handlers/timecapsule/: __init__.py  helpers.py  timecapsule.py  timepicker_bigstep.py
chronogram/handlers/timecapsule/aiogram3_simplecalendar/: __init__.py  common.py  schemas.py  simple_calendar.py
chronogram/middlewares/: __init__.py  l10n.py  logging.py
chronogram/middlewares/l10n_data/: __init__.py  en.py  ru.py
migration/: env.py
tests/: test_media.py
tests/test_chronogram/: test_utils.py
tests/test_chronogram/test_handlers/: test_routers_order.py  test_timecapsule_parsers.py
